# OS

os_cp/doc/: report.docx
os_cp/src/: CMakeLists.txt  Makefile  main  main.cpp  mck-k.cpp  pow_of_two_allocator.cpp  pow_of_two_allocator.hpp  prog_a.cpp  prog_b.cpp  prog_c.cpp  zmq_helper.hpp
os_lab1/doc/: report.docx
os_lab1/src/: str.txt
os_lab2/doc/: report.docx  report_lab2.docx
os_lab2/src/: Makefile  a.out  o.txt  parent  parent.cpp  s.txt  t.txt
os_lab3/doc/: report.docx
os_lab3/src/: Makefile  main  main.cpp  o.txt  test.txt  test1.txt
os_lab4/doc/: report.docx
os_lab4/src/: Makefile  lab4  lab4.cpp  o.txt  p.txt
os_lab5/doc/: report.docx
os_lab5/src/: Makefile  implementation1.c  implementation2.c  implementation2.h  o.txt  prog1.c  prog1_1  prog1_2  prog2  prog2.c  test1.txt
os_lab6/doc/: report.docx
os_lab6/src/: CMakeLists.txt  calc_node.cpp  control_node.cpp  topology_node.hpp  topology_tree.hpp
